set up more template pages for memories, map, and popular

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,13 @@
 <footer class="site--footer">
   <div class="container">
     <div class="content has-text-centered">
+
       <p>
-        <strong>Etch</strong> by <a href="https://github.com/cmcneese">Chris</a> & <a href="https://github.com/KittyBot">Christina</a> Made with {{emoji-character "heart"}}.
+        <strong>Etch</strong> by
+        <a href="https://github.com/cmcneese">Chris</a> &amp;
+        <a href="https://github.com/KittyBot">Christina</a>
       </p>
-      <p>
-      </p>
+
     </div>
   </div>
 </footer>
