--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>Etch</strong> by <a href="https://github.com/cmcneese">Chris</a> & <a href="https://github.com/KittyBot">Christina</a> Made with {{emoji-character "heart"}}.
+        <strong>Etch</strong> by <a href="https://github.com/cmcneese">Chris</a> & <a href="https://github.com/KittyBot">Christina</a>.
       </p>
       <p>
       </p>
