fixed login and signup error plus random styling

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   </style>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Etch</title>
+  <title>etch</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1"> {{content-for "head"}}
 
@@ -30,7 +30,7 @@
     <div class="content has-text-centered">
 
       <p>
-        <strong>Etch</strong> by
+        <strong>etch</strong> by
         <a href="https://github.com/cmcneese">Chris</a> &amp;
         <a href="https://github.com/KittyBot">Christina</a>
       </p>
